   * Uses xdg or platform-specific paths when running in installed mode
   * Only uses local directories when running in portable mode
   * Automatic detection and paths can be overridden by invocation arguments

 * New set of invocation flags and arguments (includes long arguments)

 * NSIS installer for windows

 * Support for OS X

 * Fixed various insufficient memory allocations

 * Separate tyre and rim models replaced by single wheel models (by world/track)

 * New models and tracks:
   * New wheels, ramps and stunt objects by CodieMorgan/MoruganKodi/コディ[KODI]
   * Scramble-like test road by orgyia
   * superbowl and vertigo roads reworked to be much more pleasant to drive

 * New logging system:
   * Realtime log output now also on windows
   * Writes complete log output to log file
   * Errors written to stderr (and displayed in message box on windows)

 * Interface improvements:
   * Joystick (gamepad) support
   * Anti-Aliasing support (multisample)
   * More reliable window creation (native BPP, better fullscreen support)
   * Use native screen resolution for fullscreen mode
   * Better information output regarding window creation/resize

 * Simulation improvements:
   * Increased simulation stability
   * Simulation does not speed up to catch up with realtime (after lag) anymore
   * Non-zero surface layer depth (less jitter/improved collision stability)
   * New air/liquid drag simulation calculation (both linear and rotational)
   * Added per-axis rotational drag coefficients (used by cars, like linear)

 * Camera improvements:
   * More reliable movement (more responsive, bumper camera perfectly still)
   * New damping/drag simulation
   * Hopefully all potential NaN position/rotation results can now be avoided
   * Camera settings are now car-specific, not defined in player profile
   * Modified camera (position) can now be reset without restarting the game

 * Car improvements:
   * Major reconfiguration of "Venom" car