@@ -77,13 +77,6 @@ backface_culling true #don't render faces that can't be seen
 fullscreen false #full screen window, will use current screen resolution
 multisample 4 #multisample anti-aliasing (MSAA), number of samples (0=disable)
 
-#TODO: the following two should move to track.conf(/scene.lst)
-#near and for clipping distances
-clipping 1 1500
-
-#fade the far clipping to hide the edge from this distance
-fog 1000
-
 #fixed field of view, in degrees (horizontally)
 FOV 45 #0=use dynamic FOV instead
 
