@@ -8,18 +8,37 @@
 #
 #visual properties:
 #
-#blue sky
-sky 0.53 0.81 0.92
 
-#sun direction and colour (range from 1.0 to -1.0)
-position -1.0 0.5 1.0 0 #x,y,z and directionality (not 0 -> point)
-ambient 0.0 0.0 0.0 #slightly visible "shadows"
-diffuse 1.0 1.0 1.0 #white sun
-specular 1.0 1.0 1.0 #reflections
+#blue sky (clearing colour)
+background 0.53 0.81 0.92
+
+#near and far clipping distances
+clipping 1 1500
+
+#fog
+#modes:
+#0: disabled
+#1: linear (good for making a "wall of fog" to hide far clipping)
+#2: exponential (more realistic fog, but never completely blocks vision)
+#3: square exponential (similar, more feeling of depth)
+
+#note: linear mode uses the "fog:range" parameter, the others use "fog:density"
+
+#fade to background colour to hide the far clipping plane:
+fog:mode 3 #exp^2
+fog:density 0.0015 #just about hides the far clipping
+fog:colour 0.53 0.81 0.92 #same as background
+
+#sun direction and colour
+position -1.0 0.5 1.0 0.0 #x,y,z position or direction (if last is 1 or 0)
+ambient 0.0 0.0 0.0 #(shaded areas are still a bit visible...)
+diffuse 1.0 1.0 1.0 #bright white sun
+specular 1.0 1.0 1.0 #bright reflections
 
 #
 #physics properties
 #
+
 #gravity
 gravity 0 0 -9.82 #pretty standard gravity, along z axis
 
