@@ -56,8 +56,6 @@ extern struct internal_struct {
 	bool culling;
 	bool fullscreen;
 	int msaa;
-	float clipping[2];
-	float fog;
 	float fov;
 	float dist;
 } internal;
@@ -83,8 +81,6 @@ const struct internal_struct internal_defaults = {
 	true,
 	false,
 	4,
-	{1.0, 1500.0},
-	1000.0,
 	45.0,
 	2500.0};
 
@@ -118,8 +114,6 @@ const struct Conf_Index internal_index[] = {
 	{"backface_culling",	'b',1, offsetof(struct internal_struct, culling)},
 	{"fullscreen",		'b',1, offsetof(struct internal_struct, fullscreen)},
 	{"multisample",		'i',1, offsetof(struct internal_struct, msaa)},
-	{"clipping",		'f',2, offsetof(struct internal_struct, clipping)},
-	{"fog",			'f',1, offsetof(struct internal_struct, fog)},
 	{"FOV",			'f',1, offsetof(struct internal_struct, fov)},
 	{"eye_distance",	'f',1, offsetof(struct internal_struct, dist)},
 
